DroneArmy/run_client_log_8.txt

> Configure project :
Fabric Loom: 1.14.10
Project directory 'C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy' is located in OneDrive. This is known to cause issues and slower performance. Consider moving the project to a different location.

> Task :compileJava FAILED
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:71: error: incompatible types: MobEntity cannot be converted to PathAwareEntity
                new com.drone_army.entity.ai.DroneFollowGoal((MobEntity) (Object) this, 1.25D, 10.0F, 5.0F));
                                                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

[Incubating] Problems report is available at: file:///C:/Users/carte/OneDrive/Desktop/Code/MC%20Mods/DroneArmy/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:71: error: incompatible types: MobEntity cannot be converted to PathAwareEntity
                  new com.drone_army.entity.ai.DroneFollowGoal((MobEntity) (Object) this, 1.25D, 10.0F, 5.0F));
                                                               ^
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 1s
1 actionable task: 1 executed
